--- a/DDona.SimpleAuth.Api/DDona.SimpleAuth.Api.csproj
+++ b/DDona.SimpleAuth.Api/DDona.SimpleAuth.Api.csproj
@@ -7,12 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.12" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.12" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DDona.SimpleAuth.Domain\DDona.SimpleAuth.Domain.csproj" />
+    <ProjectReference Include="..\DDona.SimpleAuth.Infra\DDona.SimpleAuth.Infra.csproj" />
   </ItemGroup>
 
 </Project>
