--- a/DDona.SimpleAuth.Api/appsettings.json
+++ b/DDona.SimpleAuth.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Default": "Server=.\\SQLServer;Database=SimpleAuth;User Id=sa; Pasword=123123"
+  },
   "AllowedHosts": "*"
 }
