--- a/DDona.SimpleAuth.Api/appsettings.json
+++ b/DDona.SimpleAuth.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=.\\SQLServer;Database=SimpleAuth;User Id=sa; Pasword=123123"
+    "Default": "Server=.\\SQLServer;Database=SimpleAuth;User Id=sa; Password=123123"
   },
   "AllowedHosts": "*"
 }
