--- a/DDona.SimpleAuth.Api/appsettings.Development.json
+++ b/DDona.SimpleAuth.Api/appsettings.Development.json
@@ -1,8 +1,19 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ]
+  },
+  "ConnectionStrings": {
+    "Default": "Server=.\\SQLServer;Database=SimpleAuth;User Id=sa; Password=123123"
   }
 }
