--- a/DDona.SimpleAuth.Api/Properties/launchSettings.json
+++ b/DDona.SimpleAuth.Api/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7267;http://localhost:5019",
+      "applicationUrl": "https://localhost:7200",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
