changing appsettings files

--- a/DDona.SimpleAuth.Api/appsettings.json
+++ b/DDona.SimpleAuth.Api/appsettings.json
@@ -1,9 +1,25 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ]
   },
-  "AllowedHosts": "*"
+  "JwtConfiguration": {
+    "Issuer": "https://localhost:7200",
+    "Audience": "https://localhost:7200",
+    "Key": "a bunch of words and 6#4(23&@ that will eventuall1 become a key!",
+    "LifeTimeMinutes": "5"
+  },
+  "ConnectionStrings": {
+    "Default": "Server=.\\SQLServer;Database=SimpleAuth;User Id=sa; Password=123123"
+  }
 }
