--- a/DDona.SimpleAuth.Api/appsettings.Development.json
+++ b/DDona.SimpleAuth.Api/appsettings.Development.json
@@ -1,19 +1,3 @@
 {
-  "Serilog": {
-    "Using": [ "Serilog.Sinks.Console" ],
-    "MinimumLevel": "Information",
-    "WriteTo": [
-      {
-        "Name": "Console"
-      }
-    ],
-    "Enrich": [
-      "FromLogContext",
-      "WithMachineName",
-      "WithThreadId"
-    ]
-  },
-  "ConnectionStrings": {
-    "Default": "Server=.\\SQLServer;Database=SimpleAuth;User Id=sa; Password=123123"
-  }
+  //nothing to override
 }
