jwt configuration app settings

--- a/DDona.SimpleAuth.Api/appsettings.json
+++ b/DDona.SimpleAuth.Api/appsettings.json
@@ -13,7 +13,7 @@
       "WithThreadId"
     ]
   },
-  "JwtConfiguration": {
+  "JwtBearerConfiguration": {
     "Issuer": "https://localhost:7200",
     "Audience": "https://localhost:7200",
     "Key": "a bunch of words and 6#4(23&@ that will eventuall1 become a key!",
