--- a/DDona.SimpleAuth.Api/DDona.SimpleAuth.Api.csproj
+++ b/DDona.SimpleAuth.Api/DDona.SimpleAuth.Api.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\DDona.SimpleAuth.Infra\DDona.SimpleAuth.Infra.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\AppSettings\" />
+  </ItemGroup>
+
 </Project>
