add refresh token validity time

--- a/DDona.SimpleAuth.Api/appsettings.json
+++ b/DDona.SimpleAuth.Api/appsettings.json
@@ -17,7 +17,8 @@
     "Issuer": "https://localhost:7200",
     "Audience": "https://localhost:7200",
     "Key": "a bunch of words and 6#4(23&@ that will eventuall1 become a key!",
-    "LifeTimeMinutes": "5"
+    "AccessTokenLifeTimeMinutes": "1",
+    "RefreshTokenLifeTimeMinutes": "10"
   },
   "ConnectionStrings": {
     "Default": "Server=.\\SQLServer;Database=SimpleAuth;User Id=sa; Password=123123"
