changing architecture some concerns now are fully to the application. UnitOfWork is now a fully separated class

--- a/DDona.SimpleAuth.Application/DDona.SimpleAuth.Application.csproj
+++ b/DDona.SimpleAuth.Application/DDona.SimpleAuth.Application.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DDona.SimpleAuth.Domain\DDona.SimpleAuth.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
